RESOLVED FIXED214238
Building CFNetworkSPI with the macOS Big Sur public SDK fails
https://bugs.webkit.org/show_bug.cgi?id=214238
Summary Building CFNetworkSPI with the macOS Big Sur public SDK fails
Rob Buis
Reported 2020-07-12 12:43:34 PDT
Build errors: In file included from WebKitBuild/Release/DerivedSources/WebCore/unified-sources/UnifiedSource198.cpp:5: In file included from ./loader/CookieJar.cpp:35: In file included from Source/WebCore/platform/network/NetworkStorageSession.h:42: PAL/pal/spi/cf/CFNetworkSPI.h:71:1: error: expected unqualified-id @interface _NSHTTPConnectionInfo : NSObject ^ PAL/pal/spi/cf/CFNetworkSPI.h:73:1: error: expected unqualified-id @property (readonly) BOOL isValid; ^ PAL/pal/spi/cf/CFNetworkSPI.h:74:1: error: expected unqualified-id @end ^ PAL/pal/spi/cf/CFNetworkSPI.h:78:1: error: expected unqualified-id @end ^
Attachments
Patch (1.83 KB, patch)
2020-07-12 12:48 PDT, Rob Buis
no flags
Patch (1.89 KB, patch)
2020-07-12 14:41 PDT, Rob Buis
no flags
Rob Buis
Comment 1 2020-07-12 12:48:07 PDT
Darin Adler
Comment 2 2020-07-12 14:29:27 PDT
Comment on attachment 404113 [details] Patch View in context: https://bugs.webkit.org/attachment.cgi?id=404113&action=review > Source/WebCore/PAL/pal/spi/cf/CFNetworkSPI.h:72 > #if HAVE(PRECONNECT_PING) > + > +#if defined(__OBJC__) I’d slightly prefer this be && instead of two nested things.
Rob Buis
Comment 3 2020-07-12 14:41:37 PDT
EWS
Comment 4 2020-07-12 23:28:28 PDT
Committed r264294: <https://trac.webkit.org/changeset/264294> All reviewed patches have been landed. Closing bug and clearing flags on attachment 404117 [details].
Radar WebKit Bug Importer
Comment 5 2020-07-12 23:29:14 PDT
Note You need to log in before you can comment on or make changes to this bug.