Building CFNetworkSPI with the macOS Big Sur public SDK fails https://bugs.webkit.org/show_bug.cgi?id=214238

Patch by Rob Buis <rbuis@igalia.com> on 2020-07-12
Reviewed by Darin Adler.

Building CFNetworkSPI with the macOS Big Sur public SDK fails bacause
it has Objective-C declarations in a header that’s included by a
non-Objective-C source file, to fix wrap the declarations in a
defined(__OBJC__) block.

* pal/spi/cf/CFNetworkSPI.h:

Canonical link: https://commits.webkit.org/227059@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@264294 268f45cc-cd09-0410-ab3c-d52691b4dbfc