Source/WebCore/PAL/pal/spi/cf/CFNetworkSPI.h
@@ -67,7 +67,8 @@ WTF_EXTERN_C_END
 
 #else // !PLATFORM(WIN) && !USE(APPLE_INTERNAL_SDK)
 
-#if HAVE(PRECONNECT_PING)
+#if HAVE(PRECONNECT_PING) && defined(__OBJC__)
+
 @interface _NSHTTPConnectionInfo : NSObject
 - (void)sendPingWithReceiveHandler:(void (^)(NSError * _Nullable error, NSTimeInterval interval))pongHandler;
 @property (readonly) BOOL isValid;
@@ -76,7 +77,8 @@ WTF_EXTERN_C_END
 @interface NSURLSessionTask (HTTPConnectionInfo)
 - (void)getUnderlyingHTTPConnectionInfoWithCompletionHandler:(void (^)(_NSHTTPConnectionInfo *connectionInfo))completionHandler;
 @end
-#endif // HAVE(PRECONNECT_PING)
+
+#endif // HAVE(PRECONNECT_PING) && defined(__OBJC__)
 
 #if HAVE(LOGGING_PRIVACY_LEVEL)
 typedef enum {
